Added single function to generate the thumbnail captions
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2098 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -267,5 +267,6 @@ Added "anonymous user posting comments can not disguise as registered user" hack
 Various bug fixes in UDB integration - 17 February 2005, Chris
 Added ability to filter blocks and include plugin files into Coppermine - 17 February 2005, Chris
 Added experimental code to create and use a separate "album set" for metalbums that is not limited to the configured category depth - 17 February 2005, Donnoman
-Added ability to see summaries of which albums different user groups have access to (prevents assigning users to groups with too much access) - 18 Februrary, TranzNDance
-Enabled smilies in reviewcom.php (Review Comments) for comments with smilies - 18 Februrary, TranzNDance
+Added ability to see summaries of which albums different user groups have access to (prevents assigning users to groups with too much access) - 18 Februrary 2005, TranzNDance
+Enabled smilies in reviewcom.php (Review Comments) for comments with smilies - 18 Februrary 2005, TranzNDance
+Added single function to generate the thumbnail captions - 19 Februrary 2005, Donnoman 
