--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -270,3 +270,4 @@ Added experimental code to create and use a separate "album set" for metalbums t
 Added ability to see summaries of which albums different user groups have access to (prevents assigning users to groups with too much access) - 18 Februrary 2005, TranzNDance
 Enabled smilies in reviewcom.php (Review Comments) for comments with smilies - 18 Februrary 2005, TranzNDance
 Added single function to generate the thumbnail captions - 19 Februrary 2005, Donnoman 
+Added linked file statistics along with normal stats. (Admin setable) - February 15 2005, Aditya
