--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -269,8 +269,9 @@ Added ability to filter blocks and include plugin files into Coppermine - 17 Feb
 Added experimental code to create and use a separate "album set" for metalbums that is not limited to the configured category depth - 17 February 2005, Donnoman
 Added ability to see summaries of which albums different user groups have access to (prevents assigning users to groups with too much access) - 18 Februrary 2005, TranzNDance
 Enabled smilies in reviewcom.php (Review Comments) for comments with smilies - 18 Februrary 2005, TranzNDance
-Added single function to generate the thumbnail captions - 19 Februrary 2005, Donnoman 
+Added single function to generate the thumbnail captions - 19 Februrary 2005, Donnoman
 Added linked file statistics along with normal stats. (Admin setable) - February 15 2005, Aditya
-Added plugin actions to put content below the breadcrumb on thumbnail.php and displayimage.php - March 7 2005, Donnoman 
+Added plugin actions to put content below the breadcrumb on thumbnail.php and displayimage.php - March 7 2005, Donnoman
 Fixed display of IP address in last viewed to be dependent on 'GALLERY_ADMIN_MODE' - March 8 2005, Donnoman
 Fixed display of bb_code'ed comments being displayed raw in thumbnail captions, now is bb_decoded then strip_tagged - March 8 2005, Donnoman
+Removed styleguide theme from package (available in coppermine download section instead), usage is deprecated - 9 March 2005, GauGau
