--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -275,3 +275,4 @@ Added plugin actions to put content below the breadcrumb on thumbnail.php and di
 Fixed display of IP address in last viewed to be dependent on 'GALLERY_ADMIN_MODE' - March 8 2005, Donnoman
 Fixed display of bb_code'ed comments being displayed raw in thumbnail captions, now is bb_decoded then strip_tagged - March 8 2005, Donnoman
 Removed styleguide theme from package (available in coppermine download section instead), usage is deprecated - 9 March 2005, GauGau
+Added thai language file (user contribution) - 22 March 2005, GauGau
