--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -130,3 +130,4 @@ Added slovak translation (user contribution) - 06 November 2004, GauGau
 Added Basque language (user contribution) - 14 December 2004, GauGau
 Added Welsh language (user contribution) - 6 January 2004, GauGau
 Fixed 'inactive_tab' bug in theme.php (user contribution) - 5 February 2005, Donnoman
+Added persian (farsi) language file (user contribution) - 22 March 2005, GauGau
