Added new bridges to bridge manager
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2255 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -277,3 +277,4 @@ Fixed display of bb_code'ed comments being displayed raw in thumbnail captions, 
 Removed styleguide theme from package (available in coppermine download section instead), usage is deprecated - 9 March 2005, GauGau
 Added thai language file (user contribution) - 22 March 2005, GauGau
 Added persian (farsi) language file (user contribution) - 22 March 2005, GauGau
+Added new bridge files (Xoops, XMB, MyBB) to bridge manager - 23 March 2005, Nibbler
