--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -280,3 +280,4 @@ Added persian (farsi) language file (user contribution) - 22 March 2005, GauGau
 Added new bridge files (Xoops, XMB, MyBB) to bridge manager - 23 March 2005, Nibbler
 Fixed custom thumbs in directories that have spaces - 10 April 2005, Donnoman
 Fixed notices coming from create_session in the bridge files  - 10 April 2005, Donnoman
+Added <span> to alblink so that it's selector will work like the other anchor selectors - 10 April 2005, Donnoman
