--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -284,3 +284,4 @@ Added <span> to alblink so that it's selector will work like the other anchor se
 Changed themes/classic => themes/sample, themes/core => themes/classic, excluded 'sample' from the themeSelect, 10 April 2005, Donnoman
 Fixed require path to 'udb_base.inc.php' in the bridge files - 10 April 2005, Donnoman
 Added plugin hook in picmgmt.inc.php 'add_file_data' - 24 April 2005, Donnoman
+Added define('THEME_HAS_FILM_STRIP_GRAPHIC', 1); adjusted filmstrip template - 24 April 2005, Donnoman
