--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -289,3 +289,5 @@ Added fix for sort order of rated thumbs with identical rating - 04 May 2005, Ga
 Fixed omission about privacy settings in french language file - 04 July, GauGau
 Updated the translator's guide - 04 July 2005, GauGau
 Fixed typos in finnish language file - 05 July 2005, GauGau
+Removed depreciated randomizing code from index.php - 24 July 2005, Donnoman
+Changed to not automatically include init.inc.php for included files via the query string (?file=) - 24 July 2005, Donnoman
