--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -293,3 +293,4 @@ Removed depreciated randomizing code from index.php - 24 July 2005, Donnoman
 Changed to not automatically include init.inc.php for included files via the query string (?file=) - 24 July 2005, Donnoman
 Fixed mulitple keywords getting filtered out from iptc on upload - 07 Aug 2005, Donnoman
 Changed Upload title to be iptc headline if iptc title isn't available - 07 Aug 2005, Donnoman
+Fixed hardwired. 11 Aug 2005, Donnoman
