--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -140,3 +140,6 @@ Fixed omission about privacy settings in french language file - 04 July 2005, Ga
 Fixed typos in finnish language file - 05 July 2005, GauGau
 Added Galician language support (user contribution) - 12 August 2005, GauGau
 Fixed XSS vulnerability for EXIF data in displayimage.php
+Fixed minor bugs in italian translations - 12 August 2005, GauGau
+Fixed single quote bug for iptc - 07 September 2005, GauGau
+Fixed email validation routine for ecards - 12 August 2005, GauGau
