added exif section to docs
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2509 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -297,3 +297,4 @@ Fixed hardwired. 11 Aug 2005, Donnoman
 Added Galician language support (user contribution) - 12 August 2005, GauGau
 Fixed minor bugs in italian translations - 12 August 2005, GauGau
 Fixed email validation routine for ecards - 12 August 2005, GauGau
+Added exif section to docs - 9 September 2005, GauGau
