Added improved XP publisher section to docs (user contrib, thread id 17310)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2515 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -144,3 +144,4 @@ Increased version count from 1.3.3 to 1.3.4 - GauGau
 Fixed minor bugs in italian translations - 12 August 2005, GauGau
 Fixed single quote bug for iptc - 07 September 2005, GauGau
 Fixed email validation routine for ecards - 12 August 2005, GauGau
+Added improved XP publisher section to docs - 19 September 2005, GauGau
