--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -289,6 +289,8 @@ Added fix for sort order of rated thumbs with identical rating - 04 May 2005, Ga
 Fixed omission about privacy settings in french language file - 04 July, GauGau
 Updated the translator's guide - 04 July 2005, GauGau
 Fixed typos in finnish language file - 05 July 2005, GauGau
+Added improved XP publisher section to docs - 19 September 2005, GauGau
+
 Removed depreciated randomizing code from index.php - 24 July 2005, Donnoman
 Changed to not automatically include init.inc.php for included files via the query string (?file=) - 24 July 2005, Donnoman
 Fixed mulitple keywords getting filtered out from iptc on upload - 07 Aug 2005, Donnoman
