--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -300,3 +300,5 @@ Added Galician language support (user contribution) - 12 August 2005, GauGau
 Fixed minor bugs in italian translations - 12 August 2005, GauGau
 Fixed email validation routine for ecards - 12 August 2005, GauGau
 Added exif section to docs - 9 September 2005, GauGau
+Added improved XP publisher section to docs - 19 September 2005, GauGau
+Added portuguese language file - 19 September 2005, GauGau
