--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -145,3 +145,4 @@ Fixed minor bugs in italian translations - 12 August 2005, GauGau
 Fixed single quote bug for iptc - 07 September 2005, GauGau
 Fixed email validation routine for ecards - 12 August 2005, GauGau
 Added improved XP publisher section to docs - 19 September 2005, GauGau
+Added portuguese language file - 19 September 2005, GauGau
