Added log for fixes by abbas and aditya
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2525 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -302,3 +302,5 @@ Fixed email validation routine for ecards - 12 August 2005, GauGau
 Added exif section to docs - 9 September 2005, GauGau
 Added improved XP publisher section to docs - 19 September 2005, GauGau
 Added portuguese language file - 19 September 2005, GauGau
+Added fix for XSS vulnaribility in language selector - 20 September 2005, Aditya
+Added fix for forbidden characters (space and ampersand) issue - 20 September 2005, Abbas
