--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -147,3 +147,5 @@ Fixed email validation routine for ecards - 12 August 2005, GauGau
 Added improved XP publisher section to docs - 19 September 2005, GauGau
 Added portuguese language file - 19 September 2005, GauGau
 Fixed installation issues caused by register_long_arrays and mysql setup issues - 20 September, Nibbler
+Updated file versions in header from 1.3.4 to 1.3.5 - 25 September 2005, GauGau
+Removed legacy redirection files from docs folder  - 25 September 2005, GauGau
