--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -304,3 +304,4 @@ Added improved XP publisher section to docs - 19 September 2005, GauGau
 Added portuguese language file - 19 September 2005, GauGau
 Added fix for XSS vulnaribility in language selector - 20 September 2005, Aditya
 Added fix for forbidden characters (space and ampersand) issue - 20 September 2005, Abbas
+Added files to userpics and edit directory to avoid uploads to those folders - 01 October 2005, GauGau
