added chinese translation (user contribution)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2561 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -305,3 +305,4 @@ Added portuguese language file - 19 September 2005, GauGau
 Added fix for XSS vulnaribility in language selector - 20 September 2005, Aditya
 Added fix for forbidden characters (space and ampersand) issue - 20 September 2005, Abbas
 Added files to userpics and edit directory to avoid uploads to those folders - 01 October 2005, GauGau
+Added portuguese language file for cpg1.4.x (user contrib) - 20 October 2005, GauGau
