--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -307,3 +307,4 @@ Added fix for forbidden characters (space and ampersand) issue - 20 September 20
 Added files to userpics and edit directory to avoid uploads to those folders - 01 October 2005, GauGau
 Added portuguese language file for cpg1.4.x (user contrib) - 20 October 2005, GauGau
 Added French translation of the FAQ to docs folder - 3 November 2005, GauGau
+Fixed issue with MySQL 5 - 10 November, Nibbler
