--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -310,3 +310,4 @@ Added French translation of the FAQ to docs folder - 3 November 2005, GauGau
 Fixed issue with MySQL 5 - 10 November, Nibbler
 Added phpBB 2.0.18 bridge support - 20 November, Nibbler
 Applied speculative fixes to xp publisher component - 20 November, Nibbler
+Fixed example for template_sub_menu to include custom_link button in the docs - 24 November, Donnoman
