--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -311,3 +311,4 @@ Fixed issue with MySQL 5 - 10 November, Nibbler
 Added phpBB 2.0.18 bridge support - 20 November, Nibbler
 Applied speculative fixes to xp publisher component - 20 November, Nibbler
 Fixed example for template_sub_menu to include custom_link button in the docs - 24 November, Donnoman
+Fixed non-approved images from showing up errantly in albums with keywords set - 24 November, Donnoman
