--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -1,8 +1,4 @@
-Coppermine version: 1.3.3
-$Source$
-$Revision$
-$Author$
-$Date$
+$Id$
 
 Added Title option to sort in albums, Tarique
 Separated the breadcrumb block so that it can be placed independently of category, Tarique
@@ -95,6 +91,7 @@ Added pic keywords to meta tags - 14th March 2004, GauGau
 Added multiple URI upload changes to the language file - 16th March 2004, Hyperion
 Fixed album thumb bug - 22 March 2004, Chris
 Added support for multiple HTTP/URI uploads - 30 March 2004, Hyperion
+Fixed 'unable to ban with bb integration bug - 19th April, Nibbler
 Added height/width fields to editOnePic.php - 20 April 2004, Chris
 Fixed height/width fields in editpics.php - 20 April 2004, Chris
 Fixed 'missing controls' bug in displayimage.php - 20 April 2004, Chris
@@ -104,48 +101,212 @@ Updated/Added new screenshot gifs - 24 April 2004, Chris
 Bridge to Simple Machines Forum (SMF) - April 2004, Jack
 Calculate suitable permissioons and quotas for users in multiple usergroups - May 2004, Jack
 Album visibility now correct for admins and users in multiple usergroups - May 2004, Jack
+Anonymous can not send ecards bug fix - May 20th 2004, Nibbler
 Release 1.3.0 - 11 June 2004, GauGau
 Removed 'field1' typo in editOnepics.php, 13th June 2004 casper
-Changed 'cpg130_filetypes' to 'CPG_filetypes' - 14 June 2004, Chris
-Added 'images' folder to 'themes/classic' and inserted Coppermine logo as 'site_logo.png' - 15 June 2004, Chris
-Fixed user album thumb showing only 'nopic.jpg' - 15 June 2004, Chris
-Changed thumb generation in index.php [list_users()] to same as devel branch - 15 June 2004, Chris
-Fixed user album visibility issue - 16 June 2004, Chris
-Fixed pic count in categories issue - 16 June 2004, Chris
-Added Finnish and Malay translations - 22 June 2004, GauGau
-Removed 17 cpg1.2.1 language files from stable cvs branch - 22 June 2004, GauGau
+Added valid XHTML 1.0 transitional output to index and thumbnail, 14th June 2004 tarique
+Added server side favorite, 14th June 2004 tarique
+Added more info display to lasthits meta album, 14th June 2004 tarique
+Added ISO to EXIF extraction, 14th June 2004 tarique
+Fixed bug in update.sql, 14th June 2004, casper
+Changed 'cpg130_filetypes' to 'CPG_filetypes', 14 June 2004, Chris
+Fixed bug in index.php of not showing user gallery thumbnails, 15 June 2004, tarique
+Fixed album visibility issue - 16 June 2004, Chris
+Fixed 'install not working' - 16 June 2004, Chris
+Added valid XHTML 1.0 transitional output to displayimage, 17th June 2004, tarique
+Updated Server side favorite to be in separate table, 17th June 2004 tarique
+Added config settable profile fields, 19th June 2004, casper
+Added keyword Inserter, 20th June 2004, tarique
+Added framework for language fall back, 22 June 2004, Tarique
+Added version warning if other version than stable is being used, 22.06.2004, GauGau
+Changed profile field 6 to text area for longer biography entries etc, 22.06.2004, Casper
+Added text link over thumbnails on profile page, 23.06.2004, GauGau
+Fixed 'Restore factory defaults' bug - 24th June, Nibbler
 Added Arabic language files (user contrib) - 25 June 2004, GauGau
 Added Swedish language files (user contrib) - 25 June 2004, GauGau
+Added check to searchnew.php for "no subfolders within albums" - - 25 June 2004, GauGau
+Added some Site Navigation elements using <LINK rel='' - 25 June 2004, Tarique
+Fixed 'Private pics no longer displayed as 'last comment by' in profile page' bug - June 28th, Nibbler
+Rewritten admin tools page, added db refresh, deletion of resized pics, XHTML compliance - June 28th, Nibbler
+Added timezone GMT offset feature - 29th June, Nibbler
+Added individual query timings for debug mode box - 29th June, Nibbler
 Added Latvian language files (user contrib) - 30 June 2004, GauGau
 Added Czech language files (user contrib) - 30 June 2004, GauGau
+Fixed "> 1k users --> very slow" bug - 1 July 2004, Chris
+Added 'thumb_pfx' to system thumbs - 3 July 2004, Chris
+Added 'thumb_nopic.jpg' and 'thumb_private.jpg' to images folder - 3 July 2004, Chris
 Added warning in docs to backup anycontent when upgrading, 4 July 2004, Casper
-Fixed double slash '//' bug in upload notification email, in upload.php - 17th July 2004, Casper
-Updated version info to cpg1.3.2
-Added PunBB integration support - 9th August, Nibbler
+Fixed 'system thumbs not renaming on config change' - 4 July 2004, Chris
+Added 'if' block for unlink operations in update.php - 4 July 2004, Chris
+Added 'media-autostart' to config values - 4 July 2004, Chris
+Added 'media_autostart' to lang_config_data - 4 July 2004, Chris
+Added Password protected albums - 6th July 2004, Tarique
+Changed hard coded english in delete.php and upload.php to lang file, user contribution u3uk, 6 July 2004, Casper
+Fixed expiration bug in banning.php, added calendar.php to select date - 6 July 2004, GauGau
+Added admin option to allow banning of private IPs  - 6 July 2004, GauGau
+Moved SMTP settings from include/mailer.inc.php to coppermine config - 8 July 2004, GauGau
+Added various changes for plugin API - 8 July 2004, Chris
+Added flashing approval button if pics require admin approval - 9 July 2004, GauGau
+Replaced mailer functions to send both plain-text and html-enabled emails - 11 July, GauGau
+Added links to album properties, parent category and thumbnail view in editpics.php - 13 July 2004, GauGau
+Added online help (help-icon that can refer to parts of documentation) - 14 July 2004, GauGau
+Fixed all internal and external links in the documentation - 14th July, Nibbler
+Changed activation email link to use config set gallery url - 19th July, Nibbler
+Added reset view counter into admin tools - 20 July 2004, Nibbler
+Modified groups manager to fit on one page - 20 July 2004, GauGau
+New javascript driven config page  - 20th July, Nibbler
+Added overview over used colors in style sheets - 22 July 2004, GauGau
+Changed help icon availability for all users vs. admin only - 22 July 2004, GauGau
+Added option 'user can change email address in profile' - 22 July 2004, GauGau
+Added bridge for PunBB - 25 July 2004, Nibbler
+Added option to sort categories alphabetically - 09 August 2004, GauGau
+Added brute force attack protection - 09 August 2004, GauGau
+Added display number of uploaded pictures in the profile mod (user contribution) - 10 August 2004, GauGau
+Fixed animated smilies stoppping to move when being clicked on (user contribution) - 10 August 2004, GauGau
+Added option to select all checkboxes when editing files in an album - 12 August 2004, GauGau
+Added clickable keyword search and keyword manager - 12 August 2004, GauGau
+Silenced CHMOD command to avoid issues on servers not supporting the command - 13 August 2004, GauGau
+Added advanced sorting hack (sort by position, picture manager) - 13 August 2004, GauGau
 Added version check routine for easier upgrades - 16 August 2004, GauGau
+Added facility to disable config settings that are irrelevent with bridged installs - 20th August, Nibbler
+Added alt tags to some images for xhtml compliance - 31 August 2004, GauGau
+Changed bbcode help to display help icon instead of full text - 31 August 2004, GauGau
+Added option to sort categories by name instead of position - 31 August 2004, GauGau
+Added section to album properties where the admin can reset views, votes and files - 03 August 2004, GauGau
 Added Turkish language file (user contrib) - 05 September 2004, GauGau
 Added Catalan language file (user contrib) - 05 September 2004, GauGau
 Added Uighur language file (user contrib) - 10 September 2004, GauGau
 Added Estonian language file (user contrib) - 10 September 2004, GauGau
+Added bridge manager for easier BBS integration - 12 September 2004, GauGau
 Added Kurdish language file (user contrib) - 15 September 2004, GauGau
+Admin.php name changed to mode.php - 25 September 2004, Casper
+Config.php renamed admin.php - 25 September 2004, Casper
+Added check/uncheck all fields in reviewcom.php - 27 September 2004, GauGau
+Added link to edit files, parent category and thumbnail view in album properties - 27 September 2004, GauGau
+Added GIF support for GD back into Coppermine - 27 September 2004, kegobeer
 Fixed typos in French language file (user contribution) - 29 September 2004, GauGau
 Added overhauled Russian translation (user contribution) - 29 September 2004, GauGau
+Added mulitiple user selection and deleting - 04 October 2004, GauGau
+Added "reset group names to default" option in group manager - 04 October 2004, GauGau
+Added "check/uncheck all" option in groupmanager - 05 October 2004, GauGau
+Added scripts for recording detailed statistics for votes and hits - 05 October 2004, Aditya
+Added optional browsing through batch-added files - 06 October 2004, GauGau
+Added sub-section for logging and statistics in coppermine config and the docs to reflect the additional log features introduced lately - 06 October 2004, GauGau
+Added "check/uncheck all" option in exif manager - 07 October 2004, GauGau
+Added provisional phpbb 2.2 integration support - 07 October, Nibbler
+Added batch-activation/deactivation/password-reset in user manager - 10 October 2004, GauGau
+Added "change primary group membership" for multiple users at once in user management - 13 October 2004, GauGau
+Changed edit dirctory creation from 666 to 777 in picmgmt.inc.php - 22 October 2004, Casper
+Added language support for xp_publish.php - 26 October 2004, Casper
+Added "change secondary group" for multiple users (usermgr.php) - 27 October 2004, GauGau
+Added option to delete all files and comments when deleting users - 28 October 2004, GauGau
+Added custom header and footer include option - 02 November 2004, GauGau
 Added slovak translation (user contribution) - 06 November 2004, GauGau
+Changed options for "Image view" and "Comment settings" to be different sections - 08 November 2004, GauGau
+Added option to sort comments ascending or descending - 08 November 2004, GauGau
+Changed help pop-up to so can be read when body dark colour - 09 November 2004, Casper
+Removed admin/user mode toggle for non-admins - 16 November 2004, GauGau
+Added IPB 2.0 bridge file (user contribution) - 19 November 2004, GauGau
+Added ability to hide ecard button when user can't send - 19 November 2004, TranzNDance
+Added report to admin/mod function for files and comments - 20 November 2004, TranzNDance
+Added code to check/add trailing slash to ecards_more_pic_target in config.php - 26 November 2004, kegobeer
+Added file renaming option - 28 November 2004, Nibbler
+Added ability for users to edit their pics after upload - 28 November 2004, Nibbler
+Removed dotted line from css class "clickable_option" - 01 December 2004, GauGau
+Added support for PunBB 1.2 - 01 December 2004, Nibbler
+Added advanced searching - 8 December 2004, Nibbler
+Added server relocation script - 10 December 2004, kegobeer
+Changed coppermine version from cpg1.4.0 alpha to cpg1.4.1 beta - 12 December 2004, GauGau
+Added admin option "Allow unlogged users (guest or anonymous) access" - 12 December 2004, GauGau
 Added Basque language (user contribution) - 14 December 2004, GauGau
-Added Welsh language (user contribution) - 6 January 2004, GauGau
-Fixed 'inactive_tab' bug in theme.php (user contribution) - 5 February 2005, Donnoman
+Added ability to preview and edit ecard before sending - 15 December 2004, TranzNDance
+Added "advanced album dropdown" to "sort my pics" (picmgr.php) - 16 December 2004, GauGau
+Changed script.js to recognize IE6 and FF in compliance mode for pop-up resize - 19 December 2004, Donnoman
+Changed full size pic pop-up to be XHTML 1.0 Transitional Compliant - 19 December 2004, Donnoman
+Fixed pipe separator display when no keywords existed on the search page - 19 December 2004, Donnoman
+Enable BBcode for comments and ecards - 20 December 2004, TranzNDance
+Changed full size pic pop-up to remove style.css and use embedded stylesheet to assure minimal padding - 23 December 2004, Donnoman
+Changed script.js to use a different method to catch IE and FF in DOCTYPE mode, accomodate vert scroll bar of IE - 23 December 2004, Donnoman
+Added _TITLE localizations where _LNK's had been re-used. - 23 December 2004, Donnoman
+Fixed {APPROVAL_ID} causing validation issues - 23 December 2004, Donnoman
+Removed admin menu item "Upload approval" from sight if there are no pending approvals - 27 December 2004, GauGau
+Removed admin menu item "Display Ecards" from sight if ecard logging has not been enabled - 27 December 2004, GauGau
+Changed order of admin menu items to be more intuitive - 27 December 2004, GauGau
+Added ability for admin to approve registrations - 28 December 2004, TranzNDance
+Updated file headers - 30 December 2004, GauGau
+Changed default theme from "classic" to "core" - 1 January 2005, GauGau
+Added a update.in.php file for a couple of functions common with charsetmgr
+Some cosmetic changes in installer.css
+Added charsetmgr.php to convert the encoding of the whole database - 01 Jan 2005, chtito
+Made utf-8 the default encoding for new installs; added a "not recommended" warnin for the 'language file' encoding
+Link to the charset manager added to update.php - 02 Jan 2005, chtito
+Moved the contents of english.php into english-utf-8.php - 02 Jan 2005, chtito
+Removed all the language-utf-8.files; the language.php files are encoded in utf-8 - 05 Jan 2005, chtito
+Added calendar icon to let users choose date on banning page - 13 January 2005, GauGau
+Added configuration option to disable the vanity block - 16 Jan 2005, Donnoman
+Added files to language fallback - 18 January 2005, GauGau
+Added buttons to searchnew.php for album properties and thumbnail view - 18 January 2005, GauGau
+Added minibrowser to language fallback - 22 January 2005, GauGau
+Added coppermine bridge file (Coppermine is bridged 100% of the time) - 26 January 2005, Chris
+Modified bridging processes (usermgr *can* work with all bridge files) - 26 January 2005, Chris
+Added HTML necessary for user customizable media players - 26 January 2005, Chris
+Bug fixes - 26 January 2005, Chris
+Added documentation link to admin menu - 27 January 2005, GauGau
+Added display of the uploader under all thumbs when set in config (even random/lastviewed/lastupdated) - 30 January 2005, Donnoman
+Added switch to show/hide admin username under thumbnails - 30 January 2005, Donnoman
+Added link to user profile and sort options in review comments page - 01 February 2005, GauGau
+Added {pseudo} session functionality - 03 Februaru 2005, Chris
+Added IPTC import of title, caption, and keywords with upload.php and batch add - 05 February 2005, Donnoman
+Added function filter_content that filters arbitrary arrays of strings for bad_word matches and replaces them with the bad_word token (...) - 05 February 2005, Donnoman
+Changed wording on the ability to hide admin uploaders to Display admin uploaders under thumbnails - 08 February 2005, Donnoman
+Changed the reliance on having regular uploaders displayed in order to turn on or off displaying admin uploaders being displayed under thumbnails - 08 February 2005, Donnoman
+Added display filename under thumbnail based on admin configuration. - 09 February 2005, Donnoman
+Added display filename under thumbnail of the film strip based on admin configuration. - 09 February 2005, Donnoman
+Added admin configurable "home" button as first button in the sys_menu. - 11 February 2005, Donnoman
+Added "anonymous user posting comments can not disguise as registered user" hack (contributed by nol33t) - 15 February 2005, GauGau
+Various bug fixes in UDB integration - 17 February 2005, Chris
+Added ability to filter blocks and include plugin files into Coppermine - 17 February 2005, Chris
+Added experimental code to create and use a separate "album set" for metalbums that is not limited to the configured category depth - 17 February 2005, Donnoman
+Added ability to see summaries of which albums different user groups have access to (prevents assigning users to groups with too much access) - 18 Februrary 2005, TranzNDance
+Enabled smilies in reviewcom.php (Review Comments) for comments with smilies - 18 Februrary 2005, TranzNDance
+Added single function to generate the thumbnail captions - 19 Februrary 2005, Donnoman
+Added linked file statistics along with normal stats. (Admin setable) - February 15 2005, Aditya
+Added plugin actions to put content below the breadcrumb on thumbnail.php and displayimage.php - March 7 2005, Donnoman
+Fixed display of IP address in last viewed to be dependent on 'GALLERY_ADMIN_MODE' - March 8 2005, Donnoman
+Fixed display of bb_code'ed comments being displayed raw in thumbnail captions, now is bb_decoded then strip_tagged - March 8 2005, Donnoman
+Removed styleguide theme from package (available in coppermine download section instead), usage is deprecated - 9 March 2005, GauGau
+Added thai language file (user contribution) - 22 March 2005, GauGau
 Added persian (farsi) language file (user contribution) - 22 March 2005, GauGau
-Changed file headers and version numbers from cpg1.3.2 to cpg1.3.3 - 19 April 2005, GauGau
-Fixed omission about privacy settings in french language file - 04 July 2005, GauGau
+Added new bridge files (Xoops, XMB, MyBB) to bridge manager - 23 March 2005, Nibbler
+Fixed custom thumbs in directories that have spaces - 10 April 2005, Donnoman
+Fixed notices coming from create_session in the bridge files  - 10 April 2005, Donnoman
+Added <span> to alblink so that it's selector will work like the other anchor selectors - 10 April 2005, Donnoman
+Changed themes/classic => themes/sample, themes/core => themes/classic, excluded 'sample' from the themeSelect, 10 April 2005, Donnoman
+Fixed require path to 'udb_base.inc.php' in the bridge files - 10 April 2005, Donnoman
+Added plugin hook in picmgmt.inc.php 'add_file_data' - 24 April 2005, Donnoman
+Added define('THEME_HAS_FILM_STRIP_GRAPHIC', 1); adjusted filmstrip template - 24 April 2005, Donnoman
+Added fix for sort order of rated thumbs with identical rating - 04 May 2005, GauGau
+Fixed omission about privacy settings in french language file - 04 July, GauGau
+Updated the translator's guide - 04 July 2005, GauGau
 Fixed typos in finnish language file - 05 July 2005, GauGau
+Added improved XP publisher section to docs - 19 September 2005, GauGau
+
+Removed depreciated randomizing code from index.php - 24 July 2005, Donnoman
+Changed to not automatically include init.inc.php for included files via the query string (?file=) - 24 July 2005, Donnoman
+Fixed mulitple keywords getting filtered out from iptc on upload - 07 Aug 2005, Donnoman
+Changed Upload title to be iptc headline if iptc title isn't available - 07 Aug 2005, Donnoman
+Fixed hardwired. 11 Aug 2005, Donnoman
 Added Galician language support (user contribution) - 12 August 2005, GauGau
-Fixed XSS vulnerability for EXIF data in displayimage.php
-Increased version count from 1.3.3 to 1.3.4 - GauGau
 Fixed minor bugs in italian translations - 12 August 2005, GauGau
-Fixed single quote bug for iptc - 07 September 2005, GauGau
 Fixed email validation routine for ecards - 12 August 2005, GauGau
+Added exif section to docs - 9 September 2005, GauGau
 Added improved XP publisher section to docs - 19 September 2005, GauGau
 Added portuguese language file - 19 September 2005, GauGau
-Fixed installation issues caused by register_long_arrays and mysql setup issues - 20 September, Nibbler
-Updated file versions in header from 1.3.4 to 1.3.5 - 25 September 2005, GauGau
-Removed legacy redirection files from docs folder  - 25 September 2005, GauGau
+Added fix for XSS vulnaribility in language selector - 20 September 2005, Aditya
+Added fix for forbidden characters (space and ampersand) issue - 20 September 2005, Abbas
+Added files to userpics and edit directory to avoid uploads to those folders - 01 October 2005, GauGau
+Added portuguese language file for cpg1.4.x (user contrib) - 20 October 2005, GauGau
+Added French translation of the FAQ to docs folder - 3 November 2005, GauGau
+Fixed issue with MySQL 5 - 10 November, Nibbler
+Added phpBB 2.0.18 bridge support - 20 November, Nibbler
+Applied speculative fixes to xp publisher component - 20 November, Nibbler
