Added note to changelog about move of files from devel to stable branch
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2641 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -310,3 +310,4 @@ Added French translation of the FAQ to docs folder - 3 November 2005, GauGau
 Fixed issue with MySQL 5 - 10 November, Nibbler
 Added phpBB 2.0.18 bridge support - 20 November, Nibbler
 Applied speculative fixes to xp publisher component - 20 November, Nibbler
+Moved files from devel branch of CVS to stable branch - 25 November, Abbas Ali
