--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -313,3 +313,4 @@ Applied speculative fixes to xp publisher component - 20 November, Nibbler
 Fixed example for template_sub_menu to include custom_link button in the docs - 24 November, Donnoman
 Fixed non-approved images from showing up errantly in albums with keywords set - 24 November, Donnoman
 Increased version count from cpg1.4.2 to cpg1.5.0 - 28 November 2005, GauGau
+Fixed minor typo in english.php regarding "Create intermediate pictures" - 01 December 2005, Donnoman
