added a security alert for the admin if relocate_server.php exists.
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2723 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -319,3 +319,4 @@ Added fix for showing correct number of tabs and pages when viewing lastalb meta
 Fixed moved title after setting the charset - 02 December 2005, Donnoman
 Fixed XHTML compliance and charset missing from picEditor.php - 02, December 2005, Donnoman
 Fixed selecting sample theme from admin.php - 10, December 2005, Donnoman
+Added a security alert for the admin if relocate_server.php exists -  10, December 25, Donnoman
