added recent changes
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2745 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -318,7 +318,11 @@ Fixed minor typo in english.php regarding "Create intermediate pictures" - 01 De
 Added fix for showing correct number of tabs and pages when viewing lastalb meta album - 02 December 2005, Abbas
 Fixed moved title after setting the charset - 02 December 2005, Donnoman
 Fixed XHTML compliance and charset missing from picEditor.php - 02, December 2005, Donnoman
+Fixed project_vii css style which resulted in constant horizontal scrollbar - 03, December 2005, TranzNDance
 Fixed selecting sample theme from admin.php - 10, December 2005, Donnoman
 Added a security alert for the admin if relocate_server.php exists -  25, December 2005, Donnoman
 Fixed Duplicate keys in $lang_picinfo in english.php - 25, December 2005, Donnoman
 Removed cpg1.3.x language files - 26, December 2005, GauGau
+Internationalized ecard button titles - 27, December 2005, TranzNDance
+Fixed issue with topn images not working in keyworded albums, provided by donnoman - 27, December 2005, TranzNDance
+
