--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -325,4 +325,6 @@ Fixed Duplicate keys in $lang_picinfo in english.php - 25, December 2005, Donnom
 Removed cpg1.3.x language files - 26, December 2005, GauGau
 Internationalized ecard button titles - 27, December 2005, TranzNDance
 Fixed issue with topn images not working in keyworded albums, provided by donnoman - 27, December 2005, TranzNDance
-
+Added Russian translation - 21 January 2006, GauGau
+Added Galician translation - 24 January 2006, GauGau
+Added Ukrainian translation - 24 January 2006, GauGau
