Fixed bug "gif can't be added to favorites", thread id 25934
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2776 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -328,3 +328,5 @@ Fixed issue with topn images not working in keyworded albums, provided by donnom
 Added Russian translation - 21 January 2006, GauGau
 Added Galician translation - 24 January 2006, GauGau
 Added Ukrainian translation - 24 January 2006, GauGau
+Fixed typo in dutch language file - 25 January, GauGau
+Fixed issue "gif can't be added to favorites" - 25 January, GauGau
