fixed the bug in displaying albums and thumbnails on multiple pages(sef plugin)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2778 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -330,3 +330,4 @@ Added Galician translation - 24 January 2006, GauGau
 Added Ukrainian translation - 24 January 2006, GauGau
 Fixed typo in dutch language file - 25 January, GauGau
 Fixed issue "gif can't be added to favorites" - 25 January, GauGau
+Fixed the Search Engine friendly URLs bug in displaying multipage thumbnails and albums - 25 Jan 2006, Abbas
