--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -323,3 +323,4 @@ Removed cpg1.3.x language files - 26, December 2005, GauGau
 Internationalized ecard button titles - 27, December 2005, TranzNDance
 Fixed issue with topn images not working in keyworded albums, provided by donnoman - 27, December 2005, TranzNDance
 Fixed issue "gif can't be added to favorites" - 25 January, GauGau
+Fixed the Search Engine friendly URLs (plugin) bug in displaying multipage thumbnails and albums - 25 Jan 2006, Abbas
