--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -322,5 +322,6 @@ Fixed selecting sample theme from admin.php - 10, December 2005, Donnoman
 Removed cpg1.3.x language files - 26, December 2005, GauGau
 Internationalized ecard button titles - 27, December 2005, TranzNDance
 Fixed issue with topn images not working in keyworded albums, provided by donnoman - 27, December 2005, TranzNDance
-Fixed issue "gif can't be added to favorites" - 25 January, GauGau
+Fixed issue "gif can't be added to favorites" - 25 January 2006, GauGau
 Fixed the Search Engine friendly URLs (plugin) bug in displaying multipage thumbnails and albums - 25 Jan 2006, Abbas
+Fixed css class glitch ("button" instead of "submit") - 25 January 2006, GauGau
