--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -325,3 +325,4 @@ Fixed issue with topn images not working in keyworded albums, provided by donnom
 Fixed issue "gif can't be added to favorites" - 25 January 2006, GauGau
 Fixed the Search Engine friendly URLs (plugin) bug in displaying multipage thumbnails and albums - 25 Jan 2006, Abbas
 Fixed css class glitch ("button" instead of "submit") - 25 January 2006, GauGau
+Removed "user mode" paragraph from faq section of language file - 25 January 2006, GauGau
