Added plugin section to docs
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2781 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -340,3 +340,4 @@ Fixed typo in dutch language file - 25 January, GauGau
 Fixed issue "gif can't be added to favorites" - 25 January 2006, GauGau
 Fixed the Search Engine friendly URLs bug in displaying multipage thumbnails and albums - 25 Jan 2006, Abbas
 Fixed css class glitch ("button" instead of "submit") - 25 January 2006, GauGau
+Added plugin section to docs - 26 January 2006, GauGau
