--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -341,3 +341,4 @@ Fixed issue "gif can't be added to favorites" - 25 January 2006, GauGau
 Fixed the Search Engine friendly URLs bug in displaying multipage thumbnails and albums - 25 Jan 2006, Abbas
 Fixed css class glitch ("button" instead of "submit") - 25 January 2006, GauGau
 Added plugin section to docs - 26 January 2006, GauGau
+Fixed bug -  smilies coming broken in notification email - 31 Jan 2006, Abbas
