--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -342,3 +342,4 @@ Fixed the Search Engine friendly URLs bug in displaying multipage thumbnails and
 Fixed css class glitch ("button" instead of "submit") - 25 January 2006, GauGau
 Added plugin section to docs - 26 January 2006, GauGau
 Fixed bug -  smilies coming broken in notification email - 31 Jan 2006, Abbas
+Added function get_batch_add_album_list to get the personal albums for admin on batch add page - 4th Feb 2006, Abbas
