--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -329,3 +329,4 @@ Removed "user mode" paragraph from faq section of language file - 25 January 200
 Added plugin section to docs - 26 January 2006, GauGau
 Fixed bug -  smilies coming broken in notification email - 31 Jan 2006, Abbas
 Added function get_batch_add_album_list to get the personal albums for admin on batch add page - 4th Feb 2006, Abbas
+Fixed reset password bug - 4th Feb 2006, Abbas
