--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -340,3 +340,4 @@ Added function get_batch_add_album_list to get the personal albums for admin on 
 Fixed reset password bug - 4th Feb 2006, Abbas
 Added ukrainian language string to language selector, fixed slovak flag - 5th Feb 2006, GauGau
 Added Ukrainian, Slovak and Turkish translations - 5th Feb 2006, GauGau
+Added partial Portuguese translation - 18th Feb 2006, GauGau
