Fixed help pop-up in batch-add section (thread id 24465)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2868 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -332,3 +332,4 @@ Added function get_batch_add_album_list to get the personal albums for admin on 
 Fixed reset password bug - 4th Feb 2006, Abbas
 Added ukrainian language string to language selector, fixed slovak flag - 5th Feb 2006, GauGau
 Fixed some deprecated tags like <font> - 20th Feb 2006, GauGau
+Fixed help pop-up in batch-add section - 20th Feb 2006, GauGau
