fixed the database element name in affected_elements array in charsetmgr
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2887 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -333,3 +333,4 @@ Fixed reset password bug - 4th Feb 2006, Abbas
 Added ukrainian language string to language selector, fixed slovak flag - 5th Feb 2006, GauGau
 Fixed some deprecated tags like <font> - 20th Feb 2006, GauGau
 Fixed help pop-up in batch-add section - 20th Feb 2006, GauGau
+Fixed bug in charsetmgr - 23rd Feb 2006, Abbas
