Added default values for $or and $galleryicon to remove unnecessary notices
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2904 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -334,3 +334,4 @@ Added ukrainian language string to language selector, fixed slovak flag - 5th Fe
 Fixed some deprecated tags like <font> - 20th Feb 2006, GauGau
 Fixed help pop-up in batch-add section - 20th Feb 2006, GauGau
 Fixed bug in charsetmgr - 23rd Feb 2006, Abbas
+Added default values for $or and $galleryicon in editpics.php to remove unnecessary notices - 27th Feb 2006, Paver
