added fixes from stable branch
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2931 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -335,3 +335,5 @@ Fixed some deprecated tags like <font> - 20th Feb 2006, GauGau
 Fixed help pop-up in batch-add section - 20th Feb 2006, GauGau
 Fixed bug in charsetmgr - 23rd Feb 2006, Abbas
 Added default values for $or and $galleryicon in editpics.php to remove unnecessary notices - 27th Feb 2006, Paver
+Fixed redirecting back to original url after adding to favs - 6th March 2006, GauGau
+Fixing issue with smilie url prefix in admin comment notification - 6th March 2006, GauGau
