--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-04-08 [A] Added pid in URLs to avoid relative URLs. This will make pic URLs static and search engine friendly. {Abbas}
 2006-04-07 [S] Changed default docfile types and soundfile types from all to a list as a counter-measure against the apache webserver flaw that allows parsing of rar files {GauGau}
 2006-04-07 [A] Changed layout of changelog to improve readability {GauGau}
 2006-03-28 [C] Added name and id attributes to form elements for standards compliance and possible future use of the id {GauGau}
